--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -1,1 +1,21 @@
-<p>sidenav works!</p>
+<!--
+<div *ngIf="log">
+<h1>{{gjh}}</h1>
+<button (click)="increase()">Click</button>
+<p>Sum clicking {{count}} </p>
+</div>
+<div (click)="Page = 'main'">Main</div>
+<div (click)="Page = 'aboutus'">About us</div>
+<div (click)="Page = 'contacts'">Contacts</div>
+
+<div [ngSwitch]="Page">
+  <div *ngSwitchCase="'main'"><app-main></app-main></div>
+  <div *ngSwitchCase="'aboutus'"><app-aboutus></app-aboutus></div>
+  <div *ngSwitchCase="'contacts'"><app-contacts></app-contacts></div>
+</div>
+
+
+<div *ngIf="Page === 'main'"><app-main></app-main></div>
+<div *ngIf="Page === 'aboutus'"><app-aboutus></app-aboutus></div>
+<div *ngIf="Page === 'contacts'"><app-contacts></app-contacts></div>
+-->
